welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:16: error: type mismatch;
 found   : Unit
 required: Int
  else {
       ^